# hyperfast-course-template

./: .copier-config.yaml  .envrc  .gitignore  .tasks.toml  CHANGELOG.md  CLAUDE.md  CNAME  Makefile  README.md  copier.yaml  pyproject.toml
.copier-template/: .tasks.toml.jinja  Makefile.jinja  pyproject.toml.jinja
.copier-template/.github/workflows/: deploy-docs.yaml.jinja  {% if build_and_release %}lint_and_test.yaml{% endif %}
.copier-template/book/: _config.env.jinja
.copier-template/book/_addons/: language_redirect.html.jinja
.copier-template/book/_guidelines/en/: lecture_guidelines.md  workshop_guidelines.md
.copier-template/book/_guidelines/ko/: lecture_guidelines.md  workshop_guidelines.md
.copier-template/book/_scripts/: build.sh.jinja
.copier-template/book/{{lnag_code_1}}/: _config.yml.jinja
.copier-template/book/{{lnag_code_1}}/_static/: language_switcher.js.jinja
.copier-template/book/{{lnag_code_2}}/: _config.yml.jinja
.copier-template/{% if use_source_code_skeleton %}src{% endif %}/{{package_name}}/: __cli__.py.jinja
.github/workflows/: deploy-base-image.yaml  deploy-docs.yaml  lint_and_test.yaml  release.yaml
book/_addons/: giscus.html
book/_guidelines/en/: lecture_guidelines.md  workshop_guidelines.md
book/_guidelines/ko/: lecture_guidelines.md  workshop_guidelines.md
book/en/: index.md
book/ko/: index.md
en/: genindex.html  index.html  search.html  searchindex.js
en/about/: index.html
en/syllabus/: index.html
en/week01/: index.html  session1.html  session2.html
ko/: genindex.html  index.html  search.html  searchindex.js
ko/about/: index.html
ko/syllabus/: index.html
ko/week01/: index.html  session1.html  session2.html
src/hypercourse/: __cli__.py
src/hypercourse/conf/about/: hypercourse.yaml
tests/hypercourse/: test_cli.py
