[project]
name = "hyperfast-course-template"
dynamic = ["version"]
description = "Multilingual course creation template with interactive documentation support for international audiences"
authors = [{ name = "Young Joon Lee", email = "entelecheia@hotmail.com" }]
license = { text = "CC-BY-4.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.3",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://hypercourse.entelecheia.ai"
Repository = "https://github.com/entelecheia/hyperfast-course-template"

[project.scripts]
hypercourse = 'hypercourse.__cli__:main'

[project.optional-dependencies]
dev = [
    "python-semantic-release>=7.33.1",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "deptry>=0.16.0",
    "types-PyYAML>=6.0.12",
]

[tool.poe]
include = [".tasks.toml", ".tasks-extra.toml"]

[tool.ruff]
target-version = "py39"
line-length = 88
extend-exclude = [
    "_version.py",
    ".refs",
    ".copier-template",
    "tests",
    "docs",
    "book",
    "_build",
    "node_modules",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"_version.py" = ["W292"]

[tool.mypy]
namespace_packages = true
exclude = ["node_modules", "build", "_build", "dist", "docs", "tests", "venv", ".copier-template", ".refs"]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.9"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.report]
exclude_lines = ['if __name__ == "__main__":']

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
version_variable = "src/hypercourse/_version.py:__version__"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
commit_subject = "chore(release): :rocket: {version} [skip ci]"
prerelease_tag = "rc"
major_on_zero = true
tag_commit = true
changelog_file = "CHANGELOG.md"
upload_to_repository = true
upload_to_release = true
hvcs = "github" # hosting version control system, gitlab is also supported
build_command = "uv build"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }
[tool.hatch.build.targets.wheel]
packages = ["src/hypercourse"]
[tool.deptry]
extend_exclude = [
    ".copier-template",
    ".refs",
    "_build",
    "book",
    "docs",
    "node_modules",
    "tests",
]
ignore = ["DEP002", "DEP003"]  # Ignore unused dev dependencies and transitive imports
ignore_notebooks = true
